TEST_PROGRAMS/INVALID/hongji_chen/invalidVariableDefination.min
#invalid Variable Defination;

var a;
var b;

a+b;
